--- a/src/iotDataServer/IotDataServerConsole/IotDataServerConsole.csproj
+++ b/src/iotDataServer/IotDataServerConsole/IotDataServerConsole.csproj
@@ -32,8 +32,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.5.11\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,11 +55,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Iot.Common\Iot.Common.csproj">
-      <Project>{16855575-8ac6-4dff-bc77-a7c4c1d4e8eb}</Project>
-      <Name>Iot.Common</Name>
+    <ProjectReference Include="..\IotDataServer.Common\IotDataServer.Common.csproj">
+      <Project>{FF67BAB7-3ED0-4039-8D5A-34F483C3F90B}</Project>
+      <Name>IotDataServer.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\IotDataServer\IotDataServer.csproj">
       <Project>{403630d6-1d6e-4696-911c-92e9af8efbc0}</Project>
