--- a/src/iotDataServer/IotDataServer.Common/IotDataServer.Common.csproj
+++ b/src/iotDataServer/IotDataServer.Common/IotDataServer.Common.csproj
@@ -33,36 +33,59 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.5.11\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="websocket-sharp, Version=1.0.4.0, Culture=neutral, PublicKeyToken=5660b08a1845a91e, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebSocketSharpFork.1.0.4.0\lib\net35\websocket-sharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataModel\IDataManager.cs" />
-    <Compile Include="DataModel\IEnumerable.cs" />
-    <Compile Include="DataModel\IFolder.cs" />
-    <Compile Include="DataModel\INode.cs" />
+    <Compile Include="DataModel\PinAlignment.cs" />
+    <Compile Include="DataModel\PinNode.cs" />
+    <Compile Include="DataModel\PinObject.cs" />
+    <Compile Include="DataModel\PinPoint.cs" />
+    <Compile Include="DataModel\PinRect.cs" />
+    <Compile Include="DataModel\PinSize.cs" />
+    <Compile Include="DataModel\SimpleSettings.cs" />
+    <Compile Include="Interface\IDataManager.cs" />
+    <Compile Include="Interface\IFolder.cs" />
+    <Compile Include="Interface\INode.cs" />
     <Compile Include="DataModel\Node.cs" />
     <Compile Include="DataModel\NodeAttributes.cs" />
     <Compile Include="DataModel\NodeBaseImpl.cs" />
     <Compile Include="DataModel\NodeItem.cs" />
     <Compile Include="DataModel\NodeItems.cs" />
     <Compile Include="DataModel\NodeStatus.cs" />
-    <Compile Include="Getter\DataGetterCore.cs" />
-    <Compile Include="Getter\IDataGetter.cs" />
-    <Compile Include="Getter\PollingDataGetterBase.cs" />
+    <Compile Include="DataGetter\DataGetterCore.cs" />
+    <Compile Include="Interface\IDataGetter.cs" />
+    <Compile Include="DataGetter\PollingDataGetterBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Iot.Common\Iot.Common.csproj">
-      <Project>{16855575-8ac6-4dff-bc77-a7c4c1d4e8eb}</Project>
-      <Name>Iot.Common</Name>
-    </ProjectReference>
+    <Compile Include="Util\CoordinateUtils.cs" />
+    <Compile Include="Util\DateTimeUtils.cs" />
+    <Compile Include="Util\HttpUtils.cs" />
+    <Compile Include="Util\JsonUtils.cs" />
+    <Compile Include="Util\LocationUtils.cs" />
+    <Compile Include="Util\NetworkBytesUtils.cs" />
+    <Compile Include="Util\ReflectionUtils.cs" />
+    <Compile Include="Util\StaticExtensions.cs" />
+    <Compile Include="Util\StringUtils.cs" />
+    <Compile Include="Util\StringWriterWithEncoding.cs" />
+    <Compile Include="Util\XmlUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
