Changed data url to "hppt://[ip]:[port]/data/

--- a/src/iotDataServer/IotDataServer/IotDataServer.csproj
+++ b/src/iotDataServer/IotDataServer/IotDataServer.csproj
@@ -84,7 +84,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-    <None Include="Templates\PageLinks.cshtml">
+    <None Include="WebTemplates\PageLinks.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
