--- a/src/iotDataServer/ExtensionModules/SampleExtensionModule/SampleExtensionModule.csproj
+++ b/src/iotDataServer/ExtensionModules/SampleExtensionModule/SampleExtensionModule.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FF67BAB7-3ED0-4039-8D5A-34F483C3F90B}</ProjectGuid>
+    <ProjectGuid>{A948AEEF-AC08-4427-91E9-B8ADB4AA88AF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IotDataServer.Common</RootNamespace>
-    <AssemblyName>IotDataServer.Common</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <RootNamespace>SampleExtensionModule</RootNamespace>
+    <AssemblyName>SampleExtensionModule</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,10 +32,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.5.11\lib\net45\NLog.dll</HintPath>
+      <HintPath>..\..\packages\NLog.4.5.11\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -43,40 +44,25 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="websocket-sharp, Version=1.0.4.0, Culture=neutral, PublicKeyToken=5660b08a1845a91e, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\WebSocketSharpFork.1.0.4.0\lib\net35\websocket-sharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataModel\NodePoint.cs" />
-    <Compile Include="DataModel\SimpleSettings.cs" />
-    <Compile Include="Interface\IDataListener.cs" />
-    <Compile Include="Interface\IDataManager.cs" />
-    <Compile Include="Interface\IFolder.cs" />
-    <Compile Include="Interface\INode.cs" />
-    <Compile Include="DataModel\Node.cs" />
-    <Compile Include="DataModel\NodeAttributes.cs" />
-    <Compile Include="DataModel\NodeBaseImpl.cs" />
-    <Compile Include="DataModel\NodeItem.cs" />
-    <Compile Include="DataModel\NodeItems.cs" />
-    <Compile Include="DataModel\NodeStatus.cs" />
-    <Compile Include="DataGetter\DataGetterCore.cs" />
-    <Compile Include="Interface\IDataGetter.cs" />
-    <Compile Include="DataGetter\PollingDataGetterBase.cs" />
-    <Compile Include="Interface\INodeStatusSummary.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\DateTimeUtils.cs" />
-    <Compile Include="Util\HttpUtils.cs" />
-    <Compile Include="Util\JsonUtils.cs" />
-    <Compile Include="Util\ReflectionUtils.cs" />
-    <Compile Include="Util\StaticExtensions.cs" />
-    <Compile Include="Util\StringUtils.cs" />
-    <Compile Include="Util\StringWriterWithEncoding.cs" />
-    <Compile Include="Util\XmlUtils.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\IotDataServer.Common\IotDataServer.Common.csproj">
+      <Project>{ff67bab7-3ed0-4039-8d5a-34f483c3f90b}</Project>
+      <Name>IotDataServer.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
