--- a/src/iotDataServer/IotDataServer.Common/IotDataServer.Common.csproj
+++ b/src/iotDataServer/IotDataServer.Common/IotDataServer.Common.csproj
@@ -28,6 +28,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -70,10 +72,7 @@
     <Compile Include="Interface\INodeStatusSummary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\DateTimeUtils.cs" />
-    <Compile Include="Util\HttpUtils.cs" />
     <Compile Include="Util\JsonUtils.cs" />
-    <Compile Include="Util\ReflectionUtils.cs" />
-    <Compile Include="Util\StaticExtensions.cs" />
     <Compile Include="Util\StringUtils.cs" />
     <Compile Include="Util\StringWriterWithEncoding.cs" />
     <Compile Include="Util\XmlUtils.cs" />
