--- a/src/iotDataServer/IotDataServer/IotDataServer.csproj
+++ b/src/iotDataServer/IotDataServer/IotDataServer.csproj
@@ -30,6 +30,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -73,6 +75,11 @@
     <Compile Include="HttpServer\WebServiceUtils.cs" />
     <Compile Include="DataServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\DateTimeUtils.cs" />
+    <Compile Include="Util\JsonUtils.cs" />
+    <Compile Include="Util\StringUtils.cs" />
+    <Compile Include="Util\StringWriterWithEncoding.cs" />
+    <Compile Include="Util\XmlUtils.cs" />
     <Compile Include="WebService\IotDataService.cs" />
   </ItemGroup>
   <ItemGroup>
