--- a/src/iotDataStation/Test/ElasticSearchListener/ElasticSearchListener.csproj
+++ b/src/iotDataStation/Test/ElasticSearchListener/ElasticSearchListener.csproj
@@ -63,7 +63,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\IotDataServer.Common\IotDataServer.Common.csproj">
+    <ProjectReference Include="..\..\IotDataStation.Common\IotDataStation.Common.csproj">
       <Project>{ff67bab7-3ed0-4039-8d5a-34f483c3f90b}</Project>
       <Name>IotDataServer.Common</Name>
     </ProjectReference>
