--- a/src/iotDataStation/Examples/ElasticSearchListener/ElasticSearchListener.csproj
+++ b/src/iotDataStation/Examples/ElasticSearchListener/ElasticSearchListener.csproj
@@ -65,7 +65,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\IotDataStation.Common\IotDataStation.Common.csproj">
       <Project>{ff67bab7-3ed0-4039-8d5a-34f483c3f90b}</Project>
-      <Name>IotDataServer.Common</Name>
+      <Name>IotDataStation.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
