--- a/src/iotDataStation/IotDataStation/IotDataStation.csproj
+++ b/src/iotDataStation/IotDataStation/IotDataStation.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\DateTimeUtils.cs" />
     <Compile Include="Util\JsonUtils.cs" />
+    <Compile Include="Util\StaticExtensions.cs" />
     <Compile Include="Util\StringUtils.cs" />
     <Compile Include="Util\StringWriterWithEncoding.cs" />
     <Compile Include="Util\XmlUtils.cs" />
