1. Added ConcurrentList 2. ElasticSearch CreateIndex implementation

--- a/src/iotDataStation/IotDataStation.Common/IotDataStation.Common.csproj
+++ b/src/iotDataStation/IotDataStation.Common/IotDataStation.Common.csproj
@@ -72,6 +72,7 @@
     <Compile Include="DataGetter\PollingDataReporterBase.cs" />
     <Compile Include="Interface\INodeStatusSummary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\ConcurrentList.cs" />
     <Compile Include="Util\DateTimeUtils.cs" />
     <Compile Include="Util\JsonUtils.cs" />
     <Compile Include="Util\StringUtils.cs" />
