--- a/src/iotDataStation/Examples/ElasticSearchListener/ElasticSearchListener.csproj
+++ b/src/iotDataStation/Examples/ElasticSearchListener/ElasticSearchListener.csproj
@@ -40,6 +40,10 @@
       <HintPath>..\..\packages\NEST.6.4.0\lib\net461\Nest.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NLog.4.5.11\lib\net45\NLog.dll</HintPath>
       <Private>False</Private>
