--- a/src/iotDataStation/Examples/ElasticSearchListener/packages.config
+++ b/src/iotDataStation/Examples/ElasticSearchListener/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Elasticsearch.Net" version="6.4.0" targetFramework="net461" />
   <package id="NEST" version="6.4.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="NLog" version="4.5.11" targetFramework="net462" />
 </packages>
